feat: User Interface Section

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -16,6 +16,7 @@
     "transcribeFile": "Transcribe File",
     "textReplacement": "Text Replace",
     "audioProcessing": "Speech Processing",
+    "userInterface": "User Interface",
     "history": "History",
     "debug": "Debug",
     "about": "About"
