--- a/src/i18n/locales/de/translation.json
+++ b/src/i18n/locales/de/translation.json
@@ -3,6 +3,7 @@
     "settings": "Einstellungen...",
     "checkUpdates": "Nach Updates suchen...",
     "copyLastTranscript": "Letzte Transkription kopieren",
+    "unloadModel": "Unload Model",
     "quit": "Beenden",
     "cancel": "Abbrechen"
   },
@@ -423,3 +424,4 @@
     "transcribing": "Transkribiere..."
   }
 }
+
