--- a/src/i18n/locales/it/translation.json
+++ b/src/i18n/locales/it/translation.json
@@ -3,6 +3,7 @@
     "settings": "Impostazioni...",
     "checkUpdates": "Verifica aggiornamenti...",
     "copyLastTranscript": "Copia l'ultima trascrizione",
+    "unloadModel": "Unload Model",
     "quit": "Esci",
     "cancel": "Annulla"
   },
@@ -423,3 +424,4 @@
     "transcribing": "Trascrizione..."
   }
 }
+
