--- a/src/i18n/locales/ja/translation.json
+++ b/src/i18n/locales/ja/translation.json
@@ -3,6 +3,7 @@
     "settings": "設定...",
     "checkUpdates": "アップデートを確認...",
     "copyLastTranscript": "最新の文字起こしをコピー",
+    "unloadModel": "Unload Model",
     "quit": "終了",
     "cancel": "キャンセル"
   },
@@ -423,3 +424,4 @@
     "transcribing": "文字起こし中..."
   }
 }
+
