--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -3,6 +3,7 @@
     "settings": "Настройки...",
     "checkUpdates": "Проверить обновления...",
     "copyLastTranscript": "Скопировать последнюю транскрипцию",
+    "unloadModel": "Unload Model",
     "quit": "Выход",
     "cancel": "Отмена"
   },
@@ -526,3 +527,4 @@
     "transcribing": "Расшифровка..."
   }
 }
+
