--- a/src/i18n/locales/tr/translation.json
+++ b/src/i18n/locales/tr/translation.json
@@ -3,6 +3,7 @@
     "settings": "Ayarlar...",
     "checkUpdates": "Güncellemeleri Kontrol Et...",
     "copyLastTranscript": "Son transkripti kopyala",
+    "unloadModel": "Unload Model",
     "quit": "Çıkış",
     "cancel": "İptal"
   },
@@ -443,3 +444,4 @@
     "transcribing": "Transkribe ediliyor..."
   }
 }
+
