--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -270,6 +270,135 @@
         "placeholder": "Добавить слово",
         "add": "Добавлять",
         "remove": "Удалить {{word}}"
+      },
+      "soniox": {
+        "reset": {
+          "title": "Быстрые действия Soniox",
+          "description": "Сбросить все параметры Soniox в этом разделе к рекомендуемым значениям.",
+          "button": "Сбросить настройки Soniox",
+          "success": "Настройки Soniox сброшены к значениям по умолчанию.",
+          "failed": "Не удалось сбросить настройки Soniox: {{error}}"
+        },
+        "tellMeMore": {
+          "title": "Подробнее: Soniox Real-time",
+          "headline": "Как real-time Soniox работает в AivoRelay.",
+          "liveFlow": "Когда включен Live-режим, звук с микрофона отправляется в Soniox по WebSocket, а подтвержденные токены вставляются прямо во время речи.",
+          "stopFlow": "При Stop AivoRelay останавливает локальный захват, запрашивает финализацию, коротко ждёт хвостовые токены и возвращается в idle.",
+          "userStory": {
+            "title": "User story в нашем приложении",
+            "item1": "Как пользователь, я нажимаю один шорткат, говорю естественно и вижу стабильный текст ещё во время речи.",
+            "item2": "Когда я нажимаю Stop, запись визуально завершается сразу, а AivoRelay в фоне добирает хвостовые финальные слова.",
+            "item3": "Я могу настроить баланс между скоростью и полнотой: быстрее stop или более аккуратная финализация конца фразы."
+          },
+          "matrix": {
+            "title": "Когда использовать / Компромисс / Рекомендуемое значение",
+            "whenToUseLabel": "Когда использовать:",
+            "tradeoffLabel": "Компромисс:",
+            "recommendedLabel": "Рекомендуемое значение:",
+            "items": {
+              "live": {
+                "title": "Live Real-time Streaming",
+                "whenToUse": "Нужен текст во время речи и минимальная задержка взаимодействия.",
+                "tradeoff": "Чувствительнее к качеству сети, чем async-режим.",
+                "recommended": "ON для моделей stt-rt; OFF только если сознательно нужен не-live сценарий."
+              },
+              "finalizeTimeout": {
+                "title": "Live Finalization Timeout",
+                "whenToUse": "После Stop иногда теряются последние слова.",
+                "tradeoff": "Большее значение чаще добирает хвост, но дольше завершает операцию.",
+                "recommended": "4-6 секунд для большинства; увеличить при нестабильной сети."
+              },
+              "instantStop": {
+                "title": "Instant Stop (локальная фича AivoRelay)",
+                "whenToUse": "Нужна максимально быстрая остановка и допустимы редкие обрезания хвоста.",
+                "tradeoff": "Поздние финальные чанки игнорируются, последние слова могут обрезаться.",
+                "recommended": "По умолчанию OFF; включать только для ультра-быстрого UX."
+              },
+              "languageHints": {
+                "title": "Language Hints",
+                "whenToUse": "Обычно говорите на известном языке(ах) и хотите меньше ложных определений.",
+                "tradeoff": "Неверные hints могут увести распознавание не в ту сторону.",
+                "recommended": "Начать с одного основного языка (например: en)."
+              },
+              "endpointDetection": {
+                "title": "Endpoint Detection",
+                "whenToUse": "Нужна автоматическая финализация фраз без ручного тайминга.",
+                "tradeoff": "Слишком агрессивные параметры могут иногда финализировать чуть раньше нужного.",
+                "recommended": "ON для большинства; max endpoint delay около 2000ms как базовый старт."
+              }
+            }
+          },
+          "parametersTitle": "Что означает каждый параметр:",
+          "parameters": {
+            "model": "Model: stt-rt-* для real-time стриминга, stt-async-* для async-пайплайна.",
+            "live": "Live Real-time Streaming: включает прямой WebSocket-путь для моделей stt-rt.",
+            "timeout": "Soniox Timeout: таймаут для не-live/legacy Soniox запросов.",
+            "finalizeTimeout": "Live Finalization Timeout: сколько ждать финальные токены после Stop перед принудительным закрытием сессии.",
+            "instantStop": "Instant Stop (фича AivoRelay): мгновенно завершает live-сессию по Stop и игнорирует поздние чанки.",
+            "languageHints": "Language Hints: повышает вероятность распознавания указанных языков.",
+            "strict": "Strict Language Restriction: максимально ограничивает вывод языками из hints.",
+            "endpoint": "Endpoint Detection: семантическое определение конца фразы в Soniox.",
+            "keepalive": "Keepalive Interval: период keepalive во время тишины для удержания WebSocket.",
+            "languageIdentification": "Language Identification: добавляет метаданные обнаруженного языка по токенам.",
+            "speakerDiarization": "Speaker Diarization: добавляет метки спикеров в метаданные токенов."
+          },
+          "tip": "Рекомендуемый старт: stt-rt-v4, Live = ON, Endpoint Detection = ON, Keepalive = 10s, Finalization Timeout = 4-6s."
+        },
+        "model": {
+          "title": "Модель Soniox",
+          "description": "Идентификатор модели, который AivoRelay отправляет в Soniox при каждом запросе. В AivoRelay модели stt-rt-* включают live-стриминг с появлением текста во время речи, а stt-async-* используют не-live путь, где итог появляется после обработки.",
+          "placeholder": "stt-rt-v4"
+        },
+        "timeout": {
+          "title": "Таймаут Soniox (секунды)",
+          "description": "Общий таймаут для non-live/legacy Soniox запросов и async-операций (10-300 секунд). В UX AivoRelay большее значение снижает риск ложных таймаутов на медленной сети, но при реальной ошибке ждать придётся дольше."
+        },
+        "live": {
+          "title": "Live real-time стриминг",
+          "description": "При включении и выборе stt-rt модели AivoRelay передаёт звук напрямую в Soniox по WebSocket, а подтверждённый текст появляется во время речи. Это даёт максимально быстрый интерактивный опыт, но сильнее зависит от стабильности соединения.",
+          "realtimeOnly": "Live-стриминг доступен только для real-time моделей Soniox (stt-rt-*)."
+        },
+        "languageHints": {
+          "title": "Language hints",
+          "description": "Коды языков ISO через запятую (например: en, es). Soniox будет склоняться к этим языкам, что в AivoRelay обычно улучшает точность и уменьшает случайные переключения на другой язык.",
+          "placeholder": "en, es"
+        },
+        "languageHintsStrict": {
+          "title": "Строгое ограничение языка",
+          "description": "Сильно ограничивает распознавание языками из hints (лучше всего с одним языком). В AivoRelay это полезно, когда нужен строго один язык, но при реальном mixed-language может ухудшать часть результата."
+        },
+        "endpointDetection": {
+          "title": "Endpoint detection",
+          "description": "Разрешает Soniox автоматически определять конец фразы и финализировать токены (маркер <end>). В AivoRelay это делает поведение «живее»: итоговые слова стабилизируются быстрее на паузах."
+        },
+        "maxEndpointDelay": {
+          "title": "Макс. задержка endpoint (мс)",
+          "description": "Верхняя граница задержки после окончания речи (500-3000, по умолчанию 2000). Меньше — быстрее реакция в AivoRelay, больше — осторожнее финализация и потенциально выше стабильность на сложной речи."
+        },
+        "keepalive": {
+          "title": "Интервал keepalive (сек)",
+          "description": "Как часто отправлять keepalive при тишине (5-20 секунд), чтобы WebSocket-сессия не закрывалась. В AivoRelay это уменьшает количество переподключений между фразами и делает live-поток стабильнее."
+        },
+        "finalizeTimeout": {
+          "title": "Таймаут финализации live (секунды)",
+          "description": "После Stop в Soniox live AivoRelay ждёт финальные хвостовые токены заданное время, затем принудительно закрывает сессию и переходит в idle (2-20 секунд). Большее значение чаще «долавливает» конец фразы, меньшее — ускоряет остановку."
+        },
+        "instantStop": {
+          "title": "Мгновенный Stop (локальная фича)",
+          "description": "Локальная фича AivoRelay: по Stop сразу завершает live-сессию Soniox и не принимает поздние чанки. UX становится максимально быстрым, но вероятность обрезания последних слов заметно выше."
+        },
+        "languageIdentification": {
+          "title": "Определение языка",
+          "description": "Просит Soniox добавлять метаданные обнаруженного языка по токенам. В AivoRelay это в первую очередь полезно для анализа и отладки; обычная вставка текста по-прежнему остаётся «чистым» текстом."
+        },
+        "speakerDiarization": {
+          "title": "Диаризация спикеров",
+          "description": "Просит Soniox добавлять метки спикеров в метаданные токенов. Для AivoRelay это полезно в multi-speaker сценариях и разборе сессий; базовый UX ввода текста обычно не меняется."
+        },
+        "apiKey": {
+          "title": "API-ключ Soniox",
+          "description": "Безопасно хранится в диспетчере учётных данных Windows."
+        }
       }
     },
     "postProcessing": {
